export const snapshot = {};

snapshot[`postcss plugin 1`] = `2`;

snapshot[`postcss plugin 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      asset: true,
      engines: undefined,
      ext: ".css",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
  ],
}
`;

snapshot[`postcss plugin 3`] = `
[
]
`;

snapshot[`postcss plugin 4`] = `
{
  content: ".foo {
  color: red;
}

::root {
  --color: #333;
  --background: #fff;
  --font-family: sans-serif;
}

.text {
  font-family: var(--font-family)
}

.text p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
  }
",
  data: {
    content: '@import "variables.css";
@import "./text.css";
',
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    sourceMap: {
      file: "index.css",
      mappings: "AAAA;EACE,UAAU;AACZ;;ACAA;EACE,aAAa;EACb,kBAAkB;EAClB,yBAAyB;AAC3B;;ACNA;EACE;AAOF;;AALE;IACE,mBAAmB;IACnB,uCAAuC;IACvC,mCAA2B;YAA3B,2BAA2B;EAC7B",
      names: [
      ],
      sources: [
        "foo.css",
        "variables.css",
        "text.css",
      ],
      sourcesContent: [
        ".foo {
  color: red;
}",
        '@import "./components/foo.css";

::root {
  --color: #333;
  --background: #fff;
  --font-family: sans-serif;
}',
        ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
      ],
      version: 3,
    },
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    ext: ".css",
    path: "/index",
    remote: undefined,
  },
}
`;

snapshot[`postcss plugin 5`] = `
{
  content: ".text {
  font-family: var(--font-family)
}
.text p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
  }
",
  data: {
    content: ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    sourceMap: {
      file: "text.css",
      mappings: "AAAA;EACE;AAOF;AALE;IACE,mBAAmB;IACnB,uCAAuC;IACvC,mCAA2B;YAA3B,2BAA2B;EAC7B",
      names: [
      ],
      sources: [
        "text.css",
      ],
      sourcesContent: [
        ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
      ],
      version: 3,
    },
    tags: [
    ],
    url: "/text.css",
  },
  dest: {
    ext: ".css",
    path: "/text",
  },
  src: {
    ext: ".css",
    path: "/text",
    remote: undefined,
  },
}
`;

snapshot[`postcss plugin without includes 1`] = `2`;

snapshot[`postcss plugin without includes 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      asset: true,
      engines: undefined,
      ext: ".css",
      pageLoader: [AsyncFunction: text],
    },
  ],
}
`;

snapshot[`postcss plugin without includes 3`] = `
[
]
`;

snapshot[`postcss plugin without includes 4`] = `
{
  content: '@import "variables.css";
@import "./text.css";
',
  data: {
    content: '@import "variables.css";
@import "./text.css";
',
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    sourceMap: {
      file: "index.css",
      mappings: "AAAA,uBAAuB;AACvB,oBAAoB",
      names: [
      ],
      sources: [
        "index.css",
      ],
      sourcesContent: [
        '@import "variables.css";
@import "./text.css";
',
      ],
      version: 3,
    },
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    ext: ".css",
    path: "/index",
    remote: undefined,
  },
}
`;

snapshot[`postcss plugin without includes 5`] = `
{
  content: ".text {
  font-family: var(--font-family)
}
.text p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
  }
",
  data: {
    content: ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    sourceMap: {
      file: "text.css",
      mappings: "AAAA;EACE;AAOF;AALE;IACE,mBAAmB;IACnB,uCAAuC;IACvC,mCAA2B;YAA3B,2BAA2B;EAC7B",
      names: [
      ],
      sources: [
        "text.css",
      ],
      sourcesContent: [
        ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
      ],
      version: 3,
    },
    tags: [
    ],
    url: "/text.css",
  },
  dest: {
    ext: ".css",
    path: "/text",
  },
  src: {
    ext: ".css",
    path: "/text",
    remote: undefined,
  },
}
`;
